增加了返回内容

--- a/src/main/resources/interface_url.properties
+++ b/src/main/resources/interface_url.properties
@@ -6,3 +6,15 @@ mediaUrl=http://file.api.weixin.qq.com/cgi-bin/media/upload?access_token=
 OpenidUserinfoUrl=https://api.weixin.qq.com/cgi-bin/user/info
 #获取jsticket的url
 ticketUrl=https://api.weixin.qq.com/cgi-bin/ticket/getticket
+#gank 获取历史日期：
+gank_history=http://gank.io/api/day/history
+#上传图片
+upload_pic=https://api.weixin.qq.com/cgi-bin/media/uploadnews
+#获取用户信息   ?access_token=ACCESS_TOKEN&openid=OPENID&lang=zh_CN
+get_user_info=https://api.weixin.qq.com/cgi-bin/user/info
+#按照日期获取内容
+getOneDayContent=http://gank.io/api/history/content/day/
+#按照自定义  等获取内容 数据类型：福利 | Android | iOS | 休息视频 | 拓展资源 | 前端 | all
+#条数
+#页数
+allContent=http://gank.io/api/data/
