--- a/src/main/resources/wechat.properties
+++ b/src/main/resources/wechat.properties
@@ -6,7 +6,7 @@
 appid=wx26d5f45da3c878fb
 #获取到的AppSecret
 AppSecret=ac102d07412fc89e015df7e8c5250b14
-#沈圆的
+#sy的
 #wx9ef09c62adc0fb10
 #015b812976e491c8d68664dd969aa8a7
 #测试
