--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,38 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns:web="http://java.sun.com/xml/ns/javaee" xmlns="http://java.sun.com/xml/ns/javaee"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd
-	http://www.springframework.org/schema/websocket
-	http://www.springframework.org/schema/websocket/spring-websocket.xsd"
-         id="WebApp_ID" version="3.0">
-    <display-name>com.earyant.wechat</display-name>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:web="http://java.sun.com/xml/ns/javaee"
+         xmlns="http://java.sun.com/xml/ns/javaee"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         version="3.0">
+    <display-name>Archetype Created Web Application</display-name>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring.xml,classpath:spring-mybatis.xml,classpath:spring-quartz.xml</param-value>
-        <!-- ,classpath:spring-quartz.xml 用于做任务调度 任务定时都可以 -->
-    </context-param>
-    <context-param>
-        <param-name>log4jConfigLocation</param-name>
-        <param-value>classpath:log4j.properties</param-value>
-    </context-param>
-    <listener>
-        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
-    </listener>
-    <context-param>
-        <param-name>spring.profiles.active</param-name>
-        <param-value>dev</param-value>
-    </context-param>
-    <context-param>
-        <param-name>spring.profiles.default</param-name>
-        <param-value>dev</param-value>
-    </context-param>
-    <context-param>
-        <param-name>spring.liveBeansView.mbeanDomain</param-name>
-        <param-value>dev</param-value>
+        <param-value>
+            classpath*:/spring/applicationContext*.xml,classpath*:/spring/spring-quartz.xml
+        </param-value>
     </context-param>
     <filter>
         <filter-name>encodingFilter</filter-name>
-        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter
+        </filter-class>
         <init-param>
             <param-name>encoding</param-name>
             <param-value>UTF-8</param-value>
@@ -42,43 +23,92 @@
             <param-value>true</param-value>
         </init-param>
     </filter>
+    <filter-mapping>
+        <filter-name>encodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter>
+        <filter-name>shiroFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy
+        </filter-class>
+        <init-param>
+            <!-- 该值缺省为false,表示生命周期由SpringApplicationContext管理,设置为true则表示由ServletContainer管理 -->
+            <param-name>targetFilterLifecycle</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>shiroFilter</filter-name>
+        <!-- [/*]匹配所有请求,保证所有的可控请求都经过Shiro的过滤 -->
+        <url-pattern>*.do</url-pattern>
+    </filter-mapping>
+    <session-config>
+        <session-timeout>60</session-timeout>
+    </session-config>
+    <filter>
+        <filter-name>commonFilter</filter-name>
+        <filter-class>
+            com.ctsig.common.security.CommonFilter
+        </filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>commonFilter</filter-name>
+        <url-pattern>*.do</url-pattern>
+    </filter-mapping>
     <listener>
-        <description>spring监听器</description>
+        <listener-class>org.springframework.web.util.WebAppRootListener</listener-class>
+    </listener>
+    <listener>
+        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+    </listener>
+    <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
-    <!-- 防止内存溢出 -->
     <listener>
         <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
     </listener>
     <servlet>
-        <description>spring mvc servlet</description>
-        <servlet-name>springMvc</servlet-name>
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <servlet-name>springServlet</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet
+        </servlet-class>
         <init-param>
-            <description>spring mvc 配置文件</description>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:spring-mvc.xml</param-value>
+            <param-value>classpath*:/conf/spring-mvc.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
+    <servlet-mapping>
+        <servlet-name>springServlet</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+    <context-param>
+        <param-name>log4jConfigLocation</param-name>
+        <param-value>/WEB-INF/classes/conf/log4j.properties</param-value>
+    </context-param>
+    <context-param>
+        <param-name>log4jRefreshInterval</param-name>
+        <param-value>60000</param-value>
+    </context-param>
+
     <!-- 初始化项目需要的启动文件，一开始如果不需要初始化可以隐藏 -->
     <servlet>
         <servlet-name>interface_url-init_servlet</servlet-name>
         <servlet-class>com.earyant.web.start.InterfaceUrlIntiServlet</servlet-class>
+        <load-on-startup>100</load-on-startup>
+    </servlet>
+    <servlet>
+        <servlet-name>CXFServlet</servlet-name>
+        <servlet-class>org.apache.cxf.transport.servlet.CXFServlet
+        </servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>springMvc</servlet-name>
-        <url-pattern>/</url-pattern>
+        <servlet-name>CXFServlet</servlet-name>
+        <url-pattern>/services/*</url-pattern>
     </servlet-mapping>
-
     <welcome-file-list>
-        <welcome-file>/WEB-INF/view/index.html</welcome-file>
+        <welcome-file>login.jsp</welcome-file>
     </welcome-file-list>
-    <session-config>
-        <session-timeout>300</session-timeout>
-    </session-config>
-
     <error-page>
         <error-code>404</error-code>
         <location>/WEB-INF/error/error.jsp</location>
@@ -118,7 +148,6 @@
         <servlet-name>default</servlet-name>
         <url-pattern>*.html</url-pattern>
     </servlet-mapping>
-
     <filter>
         <filter-name>DruidWebStatFilter</filter-name>
         <filter-class>com.alibaba.druid.support.http.WebStatFilter</filter-class>
@@ -156,16 +185,13 @@
     </servlet-mapping>
     <!-- 访问监控页面：http://ip：port/projectName/druid/index.html -->
 
-    <jsp-config>
-        <jsp-property-group>
-            <display-name>jspConfiguration</display-name>
-            <url-pattern>*.jsp</url-pattern>
-            <el-ignored>false</el-ignored>
-            <scripting-invalid>false</scripting-invalid>
-            <include-prelude>/WEB-INF/common/head.jsp</include-prelude>
-        </jsp-property-group>
-    </jsp-config>
-
+    <!--<jsp-config>-->
+        <!--<jsp-property-group>-->
+            <!--<display-name>jspConfiguration</display-name>-->
+            <!--<url-pattern>*.jsp</url-pattern>-->
+            <!--<el-ignored>false</el-ignored>-->
+            <!--<scripting-invalid>false</scripting-invalid>-->
+            <!--<include-prelude>/WEB-INF/common/head.jsp</include-prelude>-->
+        <!--</jsp-property-group>-->
+    <!--</jsp-config>-->
 </web-app>
-
-
