格式化代码，支持多个公众号

--- a/src/main/resources/conf/log4j.properties
+++ b/src/main/resources/conf/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 # DEBUG info 
 log4j.appender.D=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.D.File=/usr/local/tomcat8081/webapps/wechat/logs/wechat.log
+log4j.appender.D.File=logs/wechat.log
 log4j.appender.D.Append=true
 log4j.appender.D.Threshold=INFO
 log4j.appender.D.layout=org.apache.log4j.PatternLayout
@@ -15,7 +15,7 @@ log4j.appender.D.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - 
 log4j.logger.org.quartz=INFO
 # ERROR info
 log4j.appender.E=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.E.File=/usr/local/tomcat8081/webapps/wechat/logs/wechat.log
+log4j.appender.E.File=logs/wechat.log
 log4j.appender.E.Append=true
 log4j.appender.E.Threshold=ERROR 
 log4j.appender.E.layout=org.apache.log4j.PatternLayout
