--- a/src/main/resources/conf/jdbc.properties
+++ b/src/main/resources/conf/jdbc.properties
@@ -4,7 +4,7 @@ jdbc.driver=com.mysql.cj.jdbc.Driver
 #jdbc.password=workapp2016
 jdbc.url=jdbc\:mysql\://localhost\:3306/lirui?amp&useOldAliasMetadataBehavior\=true&amp&zeroDateTimeBehavior\=convertToNull&serverTimezone=UTC
 jdbc.username=root
-jdbc.password=23769263
+jdbc.password=
 maxActive=100
 maxIdle=30
 maxWait=1000
